--- a/config.json
+++ b/config.json
@@ -1,23 +1,23 @@
 {
-    "ownerNumber": ["622150996855@s.whatsapp.net","622150996855@s.whatsapp.net"],
-    "ownerName": "ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×",
-    "instagram" : "https://instagram.com/zeeoneofc",
-    "botName": "Haruka-Mdོ ",
+    "ownerNumber" : [ "6281336462729@s.whatsapp.net"                        "6281336462729@s.whatsapp.net ],
+    "ownerName" : "ᴹᴿ᭄ Bayxzcོ ×፝֟͜×" ,
+    "instagram" : "https://www.instagram.com/kz.ffteam_official?r=nametag" ,
+    "namabot" : "KnightboyZ Bot" ,
     "footer": "api.zeeoneofc.xyz",
     "sessionName": "session",
     "pathimg": "./media/Haruka.jpg",
-    "BotKey": "Gsyt6jRJ",
+    "BotKey" : "Gsyt6jRJ" ,
     "auto_welcomeMsg": true,
-    "auto_leaveMsg": true,    
+    "auto_leaveMsg" : benar ,    
     "autobio": true,
-    "anticall": true,
+    "antipanggilan" : benar ,
     "autorespond": false,
-    "autoblok212": true,
+    "autoblok212" : benar ,
     "autoread": true,
     "gamewaktu": 90,
     "limitCount": 25,
     "gcount": {
         "prem": 1000,
-        "user": 15
+        "pengguna" : 15
     }
 }
