--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "ownerNumber" : [ "6281336462729@s.whatsapp.net" , 
-    "ownerName" : "ᴹᴿ᭄ Bayxzcོ ×፝֟͜×" ,
+    "ownerNumber" : ["6281336462729@s.whatsapp.net"] , 
+    "ownerName" : "Bayxzc " ,
     "instagram" : "https://www.instagram.com/kz.ffteam_official?r=nametag" ,
     "namabot" : "KnightboyZ Bot" ,
     "footer": "api.zeeoneofc.xyz",
